## Process this file with automake to produce Makefile.in

gkamus_datadir = $(datadir)/gkamus

gkamus_data_DATA = \
	futurecontinuous \
	pastperfectcontinuous \
	presentperfectcontinuous \
	simplepresent \
	futureperfect \
	pastcontinuous \
	presentcontinuous \
	simplefuture \
	futureperfectcontinuous \
	pastperfect \
	presentperfect \
	simplepast \
	irregular-verbs \
	gkamus-en.dict \
	gkamus-id.dict \
	gkamus.ui

EXTRA_DIST = $(gkamus_data_DATA)
